# pasusminer

./: .gitignore  AGENTS.md  README.md  config.sample.json  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml  publish-release.yml
scripts/: publish-release.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command_builder.rs  commands.rs  config.rs  log_parser.rs  main.rs  miner_manager.rs  tools.rs
src/components/: Icon.tsx  LogPanel.tsx  SetupScreen.tsx  StatusBadge.tsx
src/lib/: api.ts  coins.ts  defaults.ts  logParser.ts  types.ts
tools/gpu/: config.txt
